# tater_meshtastic_bridge

./: .env.example  .gitignore  README.md  pyproject.toml
tater_meshtastic_bridge/: config.py  database.py  main.py  service.py  store.py
tater_meshtastic_bridge/webui/: app.js  index.html  styles.css
